# insect-pol-iii

./: .gitignore  CLAUDE.md  README.md  config.yaml
data/: taxonomy_info.json
data/models/: README.md  snoRNAMe18SA1806.cm
results_Oct_3_25/: results_summary.tsv  results_summary.xlsx
scripts/: Cargo.toml  add_taxonomy.py  align_promoters.py  align_promoters_v2.py  analyze_ncrna_taxonomy.py  analyze_promoter_consensus.py  analyze_results_summary.py  analyze_stk_skipped.py  analyze_structure.py  annotate_promoter_regions.py  benchmark_match_implementations.py  bioseq_lib.py  blast_search_genomes.py  blast_to_gff3.py  build_pwm_from_alignment.py  calculate_lncrna_stats.py  calculate_pairwise_identities.py  check_ncrna_diversity.py  cmsearch_to_gff3.py  collect_species_status.py  collect_species_status_filtered.py  colorize_alignment.py  compare_genome_versions.py  compare_noecr_results.py  concat_pdfs_by_taxonomy.py  download_genomes.py  explore_species.py  export_results_to_tsv.py  extract_gff_features.py  extract_sequences_from_gff3.py  extract_structure_regions.py  extract_upstream_regions.py  extract_with_polyt_extension.py  filter_by_evalue.py  filter_fasta_by_ids.py  filter_genes_gff3.py  filter_gff3.py  filter_identical_sequences.py  filter_low_complexity.py  filter_non_standard_nucleotides.py  (+26 more)
structures/: CR34335_melanogaster_subgroup.stk  CR34335_melanogaster_subgroup.sto  CR34335_suzukii_subgroup.stk  CR34335_suzukii_subgroup.sto  README.md  noe_melanogaster_subgroup.stk  noe_melanogaster_subgroup.sto  noe_willistoni_group.stk  noe_willistoni_group.sto
(+3436 files in other folders)
