[package]
name = "match_algorithm_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "match_algorithm_rust"
path = "match_algorithm_rust.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
flate2 = "1.0"
rayon = "1.8"